---
Car Elevators
---
ALTER TABLE `elevators` ADD COLUMN `car` TINYINT UNSIGNED DEFAULT 0;

---
Entry Fee
---
ALTER TABLE `interiors` ADD COLUMN `fee` INTEGER UNSIGNED DEFAULT 0;

---
Friends
---
DROP TABLE IF EXISTS `friends`;
CREATE TABLE `friends` (

  `id` int(10) unsigned NOT NULL,

  `friend` int(10) unsigned NOT NULL,

  PRIMARY KEY (`id`,`friend`) USING BTREE

) ENGINE=InnoDB DEFAULT CHARSET=latin1;

---
Lottery
---
DROP TABLE `lotteryjackpot`;

---
Notes Item
---
ALTER TABLE `worlditems` MODIFY COLUMN `itemvalue` TEXT;

---
(per account) Player Notes
---
ALTER TABLE `accounts` ADD COLUMN `adminnote` TEXT;

---
Updates for SVN Merge of /branches/mabako-sql into trunk (r1476)
---

DROP TABLE IF EXISTS `items`;
CREATE TABLE  `items` (
  `index` int(10) unsigned NOT NULL AUTO_INCREMENT,
  `type` tinyint(3) unsigned NOT NULL,
  `owner` int(10) unsigned NOT NULL,
  `itemID` int(10) NOT NULL,
  `itemValue` text NOT NULL,
  PRIMARY KEY (`index`)
) ENGINE=InnoDB DEFAULT CHARSET=latin1;

ALTER TABLE `worlditems` DROP COLUMN `itemname`,
 MODIFY COLUMN `x` FLOAT DEFAULT 0,
 MODIFY COLUMN `y` FLOAT DEFAULT 0,
 MODIFY COLUMN `z` FLOAT DEFAULT 0,
 DROP COLUMN `items`,
 DROP COLUMN `itemvalues`;

---
updates to items/achievements
---
DROP TABLE achievementslist;
DROP TABLE items;

---
Lottery
---
CREATE TABLE lottery (characterid INT(255) NOT NULL, ticketnumber INT(3) NOT NULL)

---
Blindfold
---
ALTER TABLE `characters` ADD `blindfold` TINYINT NOT NULL DEFAULT '0'

---
Chatbubbles
---
ALTER TABLE `accounts` ADD `chatbubbles` TINYINT NOT NULL DEFAULT '1'

---
Toggling off your Phone
---
ALTER TABLE `characters` ADD `phoneoff` TINYINT NOT NULL DEFAULT '0'

---
Biz/Personal Transactions (Transfers, Withdraws, Deposits, Paydays)
---
CREATE TABLE IF NOT EXISTS `wiretransfers` (
  `id` int(10) unsigned NOT NULL auto_increment,
  `from` int(11) NOT NULL,
  `to` int(11) NOT NULL,
  `amount` int(11) NOT NULL,
  `reason` text NOT NULL,